--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 </head>
 
 <body>
-
+    
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#LatitudeAnalysis">Latitude Analysis</a>
+                <a class="navbar-brand" href="Landing Page.html">Latitude Analysis</a>
             </div>
             <ul class="nav navbar-nav">
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown">
                     Plots<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#Temperature">Temperature</a></li>
-                    <li><a href="#Cloudiness">Cloudiness</a></li>
-                    <li><a href="#Wind Speed">Wind Speed</a></li>
-                    <li><a href="#Humidity">Humidity</a></li>
+                    <li><a href="Temperature Visualization Page.html">Temperature</a></li>
+                    <li><a href="Cloudiness Visualization Page.html">Cloudiness</a></li>
+                    <li><a href="Wind Speed Visualization Page.html">Wind Speed</a></li>
+                    <li><a href="Humidity Visualization Page.html">Humidity</a></li>
                 </ul>
-                <li><a href="#Comparisons">Comparison</a></li>
-                <li><a  href="#Data">Data</a></li>
+                <li><a href="Comparison Page.html">Comparisons</a></li>
+                <li><a  href="Data Page.html">Data</a></li>
             </ul>
         </div>
     </nav>
