--- a/Cloudiness Visualization Page.html
+++ b/Cloudiness Visualization Page.html
@@ -38,7 +38,7 @@
                     </header>
                 </div>
                 <div id="Chart" class="idimage">
-                    <a href="CloudChart.png" id="CloudChart">Latitude vs. Temperature <img src="CloudChart.png" width="800px" height="550px" alt="Cloudiness"></a>
+                    <a href="CloudChart.png" id="CloudChart"><img src="CloudChart.png" width="800px" height="550px" alt="Cloudiness"></a>
                 </div>
                 <article id="Description">
                     <p>
