--- a/Comparison Page.html
+++ b/Comparison Page.html
@@ -8,23 +8,23 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-default; ">
+        <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#LatitudeAnalysis">Latitude Analysis</a>
+                    <a class="navbar-brand" href="Landing Page.html">Latitude Analysis</a>
                 </div>
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <a class="dropdown-toggle" data-toggle="dropdown">
                         Plots<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#Temperature">Temperature</a></li>
-                        <li><a href="#Cloudiness">Cloudiness</a></li>
-                        <li><a href="#Wind Speed">Wind Speed</a></li>
-                        <li><a href="#Humidity">Humidity</a></li>
+                        <li><a href="Temperature Visualization Page.html">Temperature</a></li>
+                        <li><a href="Cloudiness Visualization Page.html">Cloudiness</a></li>
+                        <li><a href="Wind Speed Visualization Page.html">Wind Speed</a></li>
+                        <li><a href="Humidity Visualization Page.html">Humidity</a></li>
                     </ul>
-                    <li><a href="#Comparisons">Comparison</a></li>
-                    <li><a  href="#Data">Data</a></li>
+                    <li><a href="Comparison Page.html">Comparisons</a></li>
+                    <li><a  href="Data Page.html">Data</a></li>
                 </ul>
             </div>
         </nav>
@@ -39,21 +39,21 @@
             <div class="row">
                 <div class="col-md-4" id="box-1">
                     <h3 style="text-align:center; color:rgb(44, 44, 138); font-family:georgia;">Latitude vs. Temperature</h3>
-                    <a href="TempChart.png" id="TempChart">Latitude vs. Temperature <img src="TempChart.png" width="300px" height="200px" alt="Temperature"></a>
+                    <a href="TempChart.png" id="TempChart"><img src="TempChart.png" width="300px" height="200px" alt="Temperature"></a>
                 </div>
                 <div class="col=md-4" id="box-2">
                     <h3 style="text-align:center; color:rgb(44, 44, 138); font-family:georgia;">Latitude vs. Cloudiness</h3>
-                    <a href="CloudChart.png" id="CloudChart">Latitude vs. Cloudiness <img src="CloudChart.png" width="300px" height="200px" alt="Cloudiness"></a>
+                    <a href="CloudChart.png" id="CloudChart"><img src="CloudChart.png" width="300px" height="200px" alt="Cloudiness"></a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4" id="box-3">
                     <h3 style="text-align:center; color:rgb(44, 44, 138); font-family:georgia;">Latitude vs. Wind Speed</h3>
-                    <a href="WindChart.png" id="WindChart">Latitude vs. Wind Speed <img src="WindChart.png" width="300px" height="200px"></a>
+                    <a href="WindChart.png" id="WindChart"><img src="WindChart.png" width="300px" height="200px"></a>
                 </div>
                 <div class="col=md-4" id="box-4">
                     <h3 style="text-align:center; color:rgb(44, 44, 138); font-family:georgia;">Latitude vs. Humidity</h3>
-                    <a href="HumidChart.png" id="HumidChart">Latitude vs. Humidity <img src="HumidChart.png" width="300px" height="200px"></a>
+                    <a href="HumidChart.png" id="HumidChart"><img src="HumidChart.png" width="300px" height="200px"></a>
                 </div>
             </div>
         </div>
