--- a/Temperature Visualization Page.html
+++ b/Temperature Visualization Page.html
@@ -37,7 +37,7 @@
                     </header>
                 </div>
                 <div id="Chart" class="idimage">
-                    <a href="TempChart.png" id="TempChart">Latitude vs. Temperature <img src="TempChart.png" width="800px" height="550px" alt="Temperature"></a>
+                    <a href="TempChart.png" id="TempChart"><img src="TempChart.png" width="800px" height="550px" alt="Temperature"></a>
                 </div>
                 <article id="Description">
                     <p>
