--- a/Wind Speed Visualization Page.html
+++ b/Wind Speed Visualization Page.html
@@ -38,7 +38,7 @@
                     </header>
                 </div>
                 <div id="Chart" class="idimage">
-                    <a href="WindChart.png" id="WindChart">Latitude vs. Wind Speed <img src="WindChart.png" width="800px" height="550px" alt="WindPic"></a>
+                    <a href="WindChart.png" id="WindChart"><img src="WindChart.png" width="800px" height="550px" alt="WindPic"></a>
                 </div>
                 <article id="Description">
                     <p>
