--- a/Comparison Page.html
+++ b/Comparison Page.html
@@ -37,21 +37,21 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4" id="box-1">
+                <div class="col-md-4 col-sm-4" id="box-1">
                     <h3 style="text-align:center; color:rgb(44, 44, 138); font-family:georgia;">Latitude vs. Temperature</h3>
                     <a href="TempChart.png" id="TempChart"><img src="TempChart.png" width="300px" height="200px" alt="Temperature"></a>
                 </div>
-                <div class="col=md-4" id="box-2">
+                <div class="col-md-4 col-sm-4" id="box-2">
                     <h3 style="text-align:center; color:rgb(44, 44, 138); font-family:georgia;">Latitude vs. Cloudiness</h3>
                     <a href="CloudChart.png" id="CloudChart"><img src="CloudChart.png" width="300px" height="200px" alt="Cloudiness"></a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4" id="box-3">
+                <div class="col-md-4 col-sm-4" id="box-3">
                     <h3 style="text-align:center; color:rgb(44, 44, 138); font-family:georgia;">Latitude vs. Wind Speed</h3>
                     <a href="WindChart.png" id="WindChart"><img src="WindChart.png" width="300px" height="200px"></a>
                 </div>
-                <div class="col=md-4" id="box-4">
+                <div class="col-md-4 col-sm-4" id="box-4">
                     <h3 style="text-align:center; color:rgb(44, 44, 138); font-family:georgia;">Latitude vs. Humidity</h3>
                     <a href="HumidChart.png" id="HumidChart"><img src="HumidChart.png" width="300px" height="200px"></a>
                 </div>
