--- a/Humidity Visualization Page.html
+++ b/Humidity Visualization Page.html
@@ -8,25 +8,30 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="Landing Page.html">Latitude Analysis</a>
-                </div>
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown">
-                        Plots<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="Temperature Visualization Page.html">Temperature</a></li>
-                        <li><a href="Cloudiness Visualization Page.html">Cloudiness</a></li>
-                        <li><a href="Wind Speed Visualization Page.html">Wind Speed</a></li>
-                        <li><a href="Humidity Visualization Page.html">Humidity</a></li>
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="Landing Page.html">Latitude Analysis</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="Temperature Visualization Page.html">Temperature</a>
+                                <a class="dropdown-item" href="Cloudiness Visualization Page.html">Cloudiness</a>
+                                <a class="dropdown-item" href="Wind Speed Visualization Page.html">Wind Speed</a>
+                                <a class="dropdown-item" href="Humidity Visualization Page.html">Humidity</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Comparison Page.html">Comparisons</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Data Page.html">Data</a>
+                        </li>
                     </ul>
-                    <li><a href="Comparison Page.html">Comparisons</a></li>
-                    <li><a  href="Data Page.html">Data</a></li>
-                </ul>
-            </div>
+                </div>
         </nav>
 
         <div class="container">
